--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,18 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.2.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
     }
 }
